--- a/docker-compose-template.yml
+++ b/docker-compose-template.yml
@@ -18,7 +18,7 @@ services:
       - §§INSTANCE-knowage-db
       - §§INSTANCE-knowage-data
     volumes_from:
-      - §§INSTANCE-seeddms-data
+      - §§INSTANCE-knowage-data
     environment:
       - WAIT_MYSQL=true
     ports:
