take the latest version

--- a/docker-compose-template.yml
+++ b/docker-compose-template.yml
@@ -6,8 +6,7 @@ networks:
 
 services:
   §§INSTANCE-knowage:
-
-    image: knowagelabs/knowage-server-docker:develop
+    image: knowagelabs/knowage-server-docker:latest
     container_name:  §§INSTANCE-knowage
     restart: unless-stopped
     networks:
