--- a/docker-compose-template.yml
+++ b/docker-compose-template.yml
@@ -26,6 +26,8 @@ services:
   §§INSTANCE-knowage-db:
     image: mysql:5.5
     container_name:  §§INSTANCE-knowage-db
+    networks:
+      - bibbox-default-network
     environment:
         - MYSQL_USER=knowageuser
         - MYSQL_PASSWORD=knowagepassword
