add localhaist as adress

--- a/docker-compose-template.yml
+++ b/docker-compose-template.yml
@@ -20,6 +20,7 @@ services:
       - §§INSTANCE-knowage-data
     environment:
       - WAIT_MYSQL=true
+      - PUBLIC_ADDRESS=127.0.0.1
     ports:
       - "§§PORT:8080"
 
